# Visual-Inertial-Odometry

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json
vio/: CMakeLists.txt
vio/drivers/: feature_extractor_driver.cpp
vio/src/: CMakeLists.txt  main.cc
vio/src/calibration/: calibration_const.cpp  calibration_const.h
vio/src/feature_extraction/: feature_extraction.cpp  feature_extraction.h
